# cpp_start_project

./: CMakeLists.txt  git_push.bat  main.cpp
Dictionary/: Dictionary.h
Hashtable/: Hashtable.cpp  Hashtable.h
lua/src/: lua.c
luascripts/: main.lua  settings.lua
luascripts/libs/: .readme.md
